--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <title>Best Reviews</title>
+    <title>Full Contact</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <div class="container">
+      <h1>Hello World!</h1>
+    </div>
+    <script src="vendor/jquery/dist/jquery.js"></script>
+    <script src="vendor/lodash/lodash.js"></script>
+    <script src="vendor/angular/angular.js"></script>
+    <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
