working on schedule view

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <title>Up and Go BBQ</title>
   </head>
   <body ng-app="bbqApp">
-    <div class="container">
-      <nav class="navbar navbar-default">
+    <div class="nav-container">
+      <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
             <button data-toggle="collapse" data-target="#navbar" class="navbar-toggle collapsed"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a ui-sref="home" class="navbar-brand">Up and Go BBQ</a>
@@ -35,6 +35,5 @@
     <script src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="index.js"></script>
     <script src="models/users.js"></script>
-    <script src="views/login.js"></script>
   </div>
 </html>
