--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
     <title>Up and Go BBQ</title>
   </head>
   <body ng-app="bbqApp">
@@ -18,9 +19,9 @@
           <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
               <li><a ui-sref="home"><i class="fa fa-home">&nbsp; Home</i></a></li>
-              <li><a ui-sref="menu"><i class="fa fa-bolt">&nbsp; Menu</i></a></li>
-              <li><a ui-sref="schedule"><i class="fa fa-bolt">&nbsp; Schedule</i></a></li>
-              <li><a ui-sref="contact"><i class="fa fa-bolt">&nbsp; Contact</i></a></li>
+              <li><a ui-sref="menu"><i class="fa fa-cutlery">&nbsp; Menu</i></a></li>
+              <li><a ui-sref="schedule"><i class="fa fa-map-marker">&nbsp; Schedule</i></a></li>
+              <li><a ui-sref="contact"><i class="fa fa-envelope-o">&nbsp; Contact</i></a></li>
             </ul>
           </div>
         </div>
