styling, content of location page

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li><a ui-sref="home"><i class="fa fa-home">&nbsp; Home</i></a></li>
               <li><a ui-sref="menu"><i class="fa fa-cutlery">&nbsp; Menu</i></a></li>
-              <li><a ui-sref="schedule"><i class="fa fa-map-marker">&nbsp; Schedule</i></a></li>
+              <li><a ui-sref="schedule"><i class="fa fa-map-marker">&nbsp; Location</i></a></li>
               <li><a ui-sref="contact"><i class="fa fa-envelope-o">&nbsp; Contact</i></a></li>
             </ul>
           </div>
