user experience for mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <title>Up and Go BBQ</title>
   </head>
   <body ng-app="bbqApp">
-    <div class="nav-container">
+    <div class="nav-container navbar-fixed-top">
       <nav class="navbar navbar-inverse">
         <div class="container-fluid">
           <div class="navbar-header">
@@ -20,7 +20,7 @@
             <ul class="nav navbar-nav navbar-right">
               <li><a ui-sref="home"><i class="fa fa-home">&nbsp; Home</i></a></li>
               <li><a ui-sref="menu"><i class="fa fa-cutlery">&nbsp; Menu</i></a></li>
-              <li><a ui-sref="schedule"><i class="fa fa-map-marker">&nbsp; Location</i></a></li>
+              <li><a ui-sref="schedule"><i class="fa fa-map-marker">&nbsp; Find Vaughan</i></a></li>
               <li><a ui-sref="contact"><i class="fa fa-envelope-o">&nbsp; Contact</i></a></li>
             </ul>
           </div>
